<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/incognitoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incognito" />

    <Switch
        android:id="@+id/desktopSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desktop_mode" />

    <Button
        android:id="@+id/clearDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_data" />
</LinearLayout>
